# chainkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  test-all.sh
chaincodec/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  ROADMAP-chaincodex.md  chaincodec-current-status.md
chaincodec/bindings/go/: Cargo.toml  chaincodec.go  chaincodec.h  go.mod
chaincodec/bindings/java/: pom.xml
chaincodec/bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
chaincodec/bindings/python/: Cargo.toml  README.md  pyproject.toml
chaincodec/bindings/wasm/: Cargo.toml  README.md  package.json
chaincodec/cli/: Cargo.toml  README.md
chaincodec/cli/src/: cmd_parse.rs  cmd_test.rs  cmd_verify.rs  main.rs
chaincodec/crates/chaincodec-batch/: Cargo.toml  README.md
chaincodec/crates/chaincodec-core/: Cargo.toml  README.md
chaincodec/crates/chaincodec-cosmos/: Cargo.toml  README.md
chaincodec/crates/chaincodec-evm/: Cargo.toml  README.md
chaincodec/crates/chaincodec-observability/: Cargo.toml  README.md
chaincodec/crates/chaincodec-registry/: Cargo.toml  README.md
chaincodec/crates/chaincodec-solana/: Cargo.toml  README.md
chaincodec/crates/chaincodec-stream/: Cargo.toml  README.md
chaincodec/docs/: architecture.md  chaincodec-explain.md  chaincodec-usecase.md  csdl-reference.md  examples.md  getting-started.md  use-cases.md
chaincodec/examples/: Cargo.toml
chaincodec/fixtures/evm/: aave-v3-borrow.json  aave-v3-repay.json  aave-v3-supply.json  balancer-v2-swap.json  chainlink-answer-updated.json  chainlink-new-round.json  chainlink-ocr-transmitted.json  erc1155-transfer-single.json  erc20-approval.json  erc20-transfer.json  erc4626-deposit.json  lido-submitted.json  opensea-order-fulfilled.json  uniswap-v2-burn.json  uniswap-v2-mint.json  uniswap-v2-swap.json  uniswap-v2-sync.json  uniswap-v3-swap.json  weth-deposit.json  weth-withdrawal.json
chaincodec/schemas/bridge/: across.csdl  celer-bridge.csdl  hop-bridge.csdl  layerzero-v2.csdl  stargate.csdl  wormhole.csdl
chaincodec/schemas/defi/: aave-v2-liquidation.csdl  aave-v2.csdl  aave-v3.csdl  balancer-v2.csdl  bancor-v3.csdl  camelot.csdl  chainlink-ccip.csdl  chainlink-vrf.csdl  chainlink.csdl  compound-v2.csdl  compound-v3.csdl  convex.csdl  curve.csdl  dodo.csdl  dydx-v4.csdl  eigenlayer.csdl  fraxether.csdl  gmx-v1.csdl  gmx.csdl  lido.csdl  maker-dao.csdl  morpho.csdl  pendle.csdl  perpetual-protocol.csdl  ribbon-finance.csdl  rocket-pool.csdl  spark.csdl  stader.csdl  sushiswap.csdl  synthetix-v3.csdl  uniswap-v2.csdl  uniswap-v3.csdl  yearn.csdl
chaincodec/schemas/governance/: compound-governance.csdl  safe-multisig.csdl
chaincodec/schemas/nft/: bayc.csdl  blur.csdl  cryptopunks.csdl  looks-rare.csdl  opensea.csdl
chaincodec/schemas/tokens/: ens.csdl  erc1155.csdl  erc20.csdl  erc4337-entrypoint.csdl  erc4626.csdl  erc721.csdl  weth.csdl
chainerrors/: Cargo.toml  README.md
chainerrors/bindings/go/: Cargo.toml  chainerrors.go  chainerrors.h  go.mod
chainerrors/bindings/java/: pom.xml
chainerrors/bindings/node/: Cargo.toml  package.json
chainerrors/bindings/python/: Cargo.toml  pyproject.toml
chainerrors/cli/: Cargo.toml
chainerrors/cli/src/: main.rs
chainerrors/crates/chainerrors-core/: Cargo.toml
chainerrors/crates/chainerrors-evm/: Cargo.toml
chainerrors/crates/chainerrors-solana/: Cargo.toml
chainerrors/fixtures/evm/: custom-error-erc20-insufficient-balance.json  custom-error-oz-ownable.json  custom-error-uniswap-t.json  empty-revert.json  panic-arithmetic-overflow.json  panic-array-oob.json  panic-assert-false.json  panic-division-by-zero.json  raw-revert-unknown.json  revert-string-insufficient-balance.json
chainerrors/schemas/errors/: known-errors.json
chainindex/: Cargo.toml  README.md
chainindex/bindings/go/: Cargo.toml  chainindex.go  chainindex.h  go.mod
chainindex/bindings/java/: pom.xml
chainindex/bindings/node/: Cargo.toml  package.json
chainindex/bindings/python/: Cargo.toml  pyproject.toml
chainindex/cli/: Cargo.toml
chainindex/cli/src/: main.rs
chainindex/crates/chainindex-aptos/: Cargo.toml
chainindex/crates/chainindex-bitcoin/: Cargo.toml
chainindex/crates/chainindex-core/: Cargo.toml
chainindex/crates/chainindex-cosmos/: Cargo.toml
chainindex/crates/chainindex-evm/: Cargo.toml
chainindex/crates/chainindex-solana/: Cargo.toml
chainindex/crates/chainindex-storage/: Cargo.toml
chainindex/crates/chainindex-substrate/: Cargo.toml
chainindex/crates/chainindex-sui/: Cargo.toml
chainindex/examples/: 01_basic_indexer.rs  02_reorg_detection.rs  03_factory_tracking.rs  04_entity_system.rs  05_dead_letter_queue.rs  06_call_traces.rs  07_streaming.rs  08_data_export.rs  09_graphql.rs  10_parallel_backfill.rs  11_multichain.rs  12_solana_indexer.rs  13_rocksdb_storage.rs  14_hot_reload.rs  15_idempotency.rs  16_block_handlers.rs  17_cosmos_indexer.rs  18_substrate_indexer.rs  19_bitcoin_indexer.rs  20_aptos_indexer.rs  21_sui_indexer.rs
chainrpc/: Cargo.toml  README.md
chainrpc/bindings/go/: Cargo.toml  chainrpc.go  chainrpc.h  go.mod
chainrpc/bindings/java/: pom.xml
chainrpc/bindings/node/: Cargo.toml  package.json
chainrpc/bindings/python/: Cargo.toml  pyproject.toml
chainrpc/cli/: Cargo.toml
chainrpc/docs/: API-REFERENCE.md  ARCHITECTURE.md  IMPLEMENTATION.md  MODULES.md  USECASES.md
chainrpc/examples/: 01_simple_client.rs  02_typed_calls.rs  03_provider_pool.rs  04_error_handling.rs  05_custom_config.rs  06_tiered_cache.rs  07_request_dedup.rs  08_auto_batching.rs  09_rate_limiting.rs  10_cu_budget_tracking.rs  11_circuit_breaker.rs  12_multi_chain.rs  13_request_hedging.rs  14_backpressure.rs  15_archive_routing.rs  16_selection_strategies.rs  17_gas_estimation.rs  18_mev_protection.rs  19_tx_lifecycle.rs  20_graceful_shutdown.rs  21_cancellation.rs  22_prometheus_metrics.rs  23_solana_rpc.rs  24_geo_routing.rs  25_gas_bumping.rs  26_reorg_detection.rs  27_cosmos_rpc.rs  28_substrate_rpc.rs  29_bitcoin_rpc.rs  30_aptos_rpc.rs  31_sui_rpc.rs  README.md
(+183 files in other folders)
