[workspace]
resolver = "2"

members = [
    "crates/chainindex-core",
    "crates/chainindex-evm",
    "crates/chainindex-storage",
    "crates/chainindex-solana",
    "crates/chainindex-cosmos",
    "crates/chainindex-substrate",
    "crates/chainindex-bitcoin",
    "crates/chainindex-aptos",
    "crates/chainindex-sui",
    "cli",
]

exclude = [
    "bindings/node",
    "bindings/python",
    "bindings/go",
    "bindings/java",
]

[workspace.package]
version      = "0.1.1"
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/DarshanKumar89/chainkit"
homepage     = "https://github.com/DarshanKumar89/chainkit"
authors      = ["ChainKit Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
futures     = "0.3"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Error handling
thiserror   = "1"
anyhow      = "1"

# Storage
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-native-tls", "migrate", "chrono", "json"] }

# Observability
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
chainindex-core    = { path = "crates/chainindex-core", version = "0.1.1" }
chainindex-evm     = { path = "crates/chainindex-evm", version = "0.1.1" }
chainindex-storage = { path = "crates/chainindex-storage", version = "0.1.1" }
chainindex-solana    = { path = "crates/chainindex-solana", version = "0.1.1" }
chainindex-cosmos    = { path = "crates/chainindex-cosmos", version = "0.1.1" }
chainindex-substrate = { path = "crates/chainindex-substrate", version = "0.1.1" }
chainindex-bitcoin   = { path = "crates/chainindex-bitcoin", version = "0.1.1" }
chainindex-aptos     = { path = "crates/chainindex-aptos", version = "0.1.1" }
chainindex-sui       = { path = "crates/chainindex-sui", version = "0.1.1" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
