# Mark as standalone workspace — not part of the chaincodec workspace.
# Required so napi-rs can run `cargo metadata` without conflicts.
[workspace]

[package]
name    = "chaincodec-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Node.js bindings for ChainCodec — napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
chaincodec-core     = { path = "../../crates/chaincodec-core" }
chaincodec-evm      = { path = "../../crates/chaincodec-evm" }
chaincodec-registry = { path = "../../crates/chaincodec-registry" }

napi        = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
hex         = "0.4"

[build-dependencies]
napi-build = "2"
