# Mark as standalone workspace — not part of the chaincodec workspace.
# Required so wasm-pack can run `cargo metadata` without conflicts.
[workspace]

[package]
name    = "chaincodec-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for ChainCodec — wasm-bindgen"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chaincodec-core     = { path = "../../crates/chaincodec-core" }
chaincodec-evm      = { path = "../../crates/chaincodec-evm" }
chaincodec-registry = { path = "../../crates/chaincodec-registry" }

wasm-bindgen       = "0.2"
js-sys             = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
hex                = "0.4"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
# Required for rand/getrandom to work in WASM browser environments
getrandom          = { version = "0.2", features = ["js"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"   # optimize for size (WASM)
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
