[package]
name        = "chaincodec-cosmos"
description = "Cosmos / CosmWasm event decoder for ChainCodec (Phase 2)"
readme.workspace    = true
keywords    = ["cosmos", "cosmwasm", "decoder", "blockchain"]
categories  = ["cryptography::cryptocurrencies"]
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
chaincodec-core = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
sha2            = { workspace = true }
hex             = { workspace = true }
