[package]
name        = "chaincodec-evm"
description = "EVM ABI decoder for ChainCodec — built on alloy-rs"
readme.workspace    = true
keywords    = ["ethereum", "evm", "abi", "decoder", "blockchain"]
categories  = ["cryptography::cryptocurrencies", "encoding"]
version.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation           = "https://docs.rs/chaincodec-evm"

[dependencies]
chaincodec-core = { workspace = true }

alloy-core       = { workspace = true }
alloy-dyn-abi    = { workspace = true }
alloy-json-abi   = { workspace = true }
alloy-primitives = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
hex         = { workspace = true }
rayon       = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
chaincodec-registry = { workspace = true }
serde_json          = { workspace = true }
hex                 = { workspace = true }
