[package]
name        = "chaincodec-solana"
description = "Solana / Anchor IDL decoder for ChainCodec (Phase 2)"
readme.workspace    = true
keywords    = ["solana", "chaincodec", "web3", "blockchain", "decoder"]
categories  = ["cryptography::cryptocurrencies"]
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
chaincodec-core = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
sha2            = { workspace = true }
hex             = { workspace = true }
bs58            = "0.5"
