[package]
name        = "chaincodec-stream"
description = "Real-time blockchain event streaming engine for ChainCodec (Tokio-based)"
readme.workspace    = true
keywords    = ["blockchain", "streaming", "events", "tokio", "websocket"]
categories  = ["asynchronous", "cryptography::cryptocurrencies"]
version.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation           = "https://docs.rs/chaincodec-stream"

[dependencies]
chaincodec-core     = { workspace = true }
chaincodec-registry = { workspace = true }

tokio             = { workspace = true }
futures           = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
bytes             = { workspace = true }
tokio-tungstenite = { workspace = true }
url               = { workspace = true }
hex               = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
