[package]
name    = "chainerrors-node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
chainerrors-core = { path = "../../crates/chainerrors-core" }
chainerrors-evm  = { path = "../../crates/chainerrors-evm" }

napi        = { version = "2", features = ["napi6"] }
napi-derive = "2"

hex         = "0.4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto         = true
strip       = "symbols"
opt-level   = 3
