[package]
name        = "chainerrors-solana"
description = "Solana program error decoder for ChainErrors (Phase 3 stub)"
keywords    = ["solana", "error", "decoder", "blockchain"]
categories  = ["cryptography::cryptocurrencies"]
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
chainerrors-core = { workspace = true }
thiserror        = { workspace = true }
