[package]
name    = "chainindex-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chainindex-core    = { path = "../../crates/chainindex-core" }
chainindex-evm     = { path = "../../crates/chainindex-evm" }
chainindex-storage = { path = "../../crates/chainindex-storage", features = ["memory"] }

tokio      = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
lto       = true
strip     = "symbols"
opt-level = 3
